<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_about_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yildirimapps.turkishwordtreasure.AboutPage"
    android:orientation="vertical"
    android:weightSum="20"
    android:background="@drawable/sky">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:alpha="0.6">

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:id="@+id/view_title"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="30sp"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <TextView
            android:id="@+id/explanation"
            android:text="@string/explanation"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorAccent"
            android:scrollbars="vertical" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:text="@string/rate"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:textStyle="normal|bold"
            android:alpha="0.5"
            android:textSize="18sp"
            android:onClick="goRating" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:text="@string/share"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:textStyle="normal|bold"
            android:alpha="0.5"
            android:textSize="18sp"
            android:onClick="shareApp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:text="@string/return_main"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:textStyle="normal|bold"
            android:alpha="0.5"
            android:textSize="18sp"
            android:onClick="goMain" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <com.google.android.gms.ads.AdView
            android:layout_centerInParent="true"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer">
        </com.google.android.gms.ads.AdView>


    </RelativeLayout>



</LinearLayout>
