<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20"
    android:background="@drawable/sky"
    tools:context="yildirimapps.turkishwordtreasure.MainMenu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:id="@+id/view_title"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="30sp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="#1ABC9C"
            android:alpha="0.9"
            android:foregroundGravity="center_horizontal"
            android:id="@+id/list_menu">
        </ListView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/about"
            android:textAllCaps="false"
            android:textStyle="normal|bold"
            android:alpha="0.5"
            android:textSize="18sp"
            android:onClick="goAbout" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <com.google.android.gms.ads.AdView
            android:layout_centerInParent="true"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer">
        </com.google.android.gms.ads.AdView>


    </RelativeLayout>

</LinearLayout>
